# autovirt

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md
lib/: Cargo.toml  isos.txt
lib/src/: create.rs  download.rs  filesystem.rs  fs.rs  imds.rs  info.rs  initdata.rs  main.rs  run.rs  scripts.rs  vmutils.rs
lib/src/conf/: meta-data  user-data
