[package]
name = "autovirt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.13", features = ["derive"] }
hyper = "1.4.1"
reqwest = { version = "0.11", features = ["blocking"] }
simple-server = "0.4.0"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
